--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.0"
+  },
+  "dependencies": {
+    "mysql": "^2.18.1"
   }
 }
